--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Hi API doukementace : Generátor oslovení pro česká jména a příjmení" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Hi API doukementace by ondrs</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Hi API doukementace</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Hi API doukementace</h1>
+        <p>Generátor oslovení pro česká jména a příjmení</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/ondrs/Hi">View on GitHub</a>
+        <p class="view"><a href="https://github.com/ondrs/Hi">View the Project on GitHub <small>ondrs/Hi</small></a></p>
 
-          <h1 id="project_title">Hi API doukementace</h1>
-          <h2 id="project_tagline">Generátor oslovení pro česká jména a příjmení</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/ondrs/Hi/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/ondrs/Hi/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/ondrs/Hi/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/ondrs/Hi/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/ondrs/Hi">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h1>
 <a name="hi" class="anchor" href="#hi"><span class="octicon octicon-link"></span></a>Hi</h1>
 
@@ -114,17 +111,12 @@ results
 }
 </code></pre>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Hi API doukementace maintained by <a href="https://github.com/ondrs">ondrs</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/ondrs">ondrs</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
