Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
         <h1>
 <a name="hi" class="anchor" href="#hi"><span class="octicon octicon-link"></span></a>Hi</h1>
 
-<p>Generátor oslovení pro česká jména a příjmení
-Služba je dostupná na adresa <a href="http://hi.ondraplsek.cz">http://hi.ondraplsek.cz</a></p>
+<p>Generátor oslovení pro česká jména a příjmení.</p>
 
 <p>API wrapper pro PHP lze nalézt na <a href="https://github.com/ondrs/Hi">https://github.com/ondrs/Hi</a></p>
 
@@ -90,7 +89,7 @@ results
             - string, nabývá hodnot 'name' nebo 'surname'
             - zda se jedná o jméno nebo příjmení
 
-        gender
+        - gender
             - string, nabývá hodnot 'male' nebo 'female'
             - určuje pohlaví
 </code></pre>
