Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Hi API doukementace by ondrs</title>
+    <title>Hi API dokumentace by ondrs</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Hi API doukementace</h1>
+        <h1>Hi API dokumentace</h1>
         <p>Generátor oslovení pro česká jména a příjmení</p>
 
         <p class="view"><a href="https://github.com/ondrs/Hi">View the Project on GitHub <small>ondrs/Hi</small></a></p>
